[gd_scene load_steps=24 format=3 uid="uid://ysbpvegbtfi6"]

[ext_resource type="Texture2D" uid="uid://q2vt8sfccyx8" path="res://assets/runes/inv_blank.png" id="1_0av6a"]
[ext_resource type="Script" path="res://Scripts/main_ui.gd" id="1_occ4b"]
[ext_resource type="Texture2D" uid="uid://0xfpydbwqhrm" path="res://assets/ui/ui_v1.png" id="2_33fx1"]
[ext_resource type="Texture2D" uid="uid://d0qvmbjy1de3r" path="res://assets/runes/blank.png" id="3_1diq0"]
[ext_resource type="Texture2D" uid="uid://bqlhe25ywtjfb" path="res://assets/ui/icons.png" id="3_6hd8i"]
[ext_resource type="Texture2D" uid="uid://cf78y0t72m74d" path="res://assets/runes/confirm.png" id="4_p5hur"]
[ext_resource type="PackedScene" uid="uid://qux01r6dbeij" path="res://inventory/inv_ui_slot.tscn" id="7_i28r4"]
[ext_resource type="PackedScene" uid="uid://bfukg06s3chtj" path="res://scenes/fade_transition.tscn" id="8_roleo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8wgf6"]
atlas = ExtResource("3_6hd8i")
region = Rect2(10, 10, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_18rsg"]
atlas = ExtResource("3_6hd8i")
region = Rect2(30, 10, 10, 10)

[sub_resource type="LabelSettings" id="LabelSettings_4gdri"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_rro6i"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_gqnsv"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_c40ji"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2mang"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_qw1rw"]
atlas = ExtResource("3_6hd8i")
region = Rect2(0, 0, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_203xu"]
atlas = ExtResource("3_6hd8i")
region = Rect2(10, 0, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_83mdc"]
atlas = ExtResource("3_6hd8i")
region = Rect2(20, 0, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_h60pp"]
atlas = ExtResource("3_6hd8i")
region = Rect2(30, 0, 10, 10)

[sub_resource type="LabelSettings" id="LabelSettings_0v3c8"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_elshm"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_73ddp"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_6v7tc"]
font_color = Color(0, 0, 0, 1)

[node name="Main_Ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -453.0
offset_right = 16.0
offset_bottom = -453.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_occ4b")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.223
offset_left = 14.0
offset_top = 953.0
offset_right = 9.08496
offset_bottom = 958.08
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.985, 0.985)
metadata/_edit_group_ = true

[node name="NinePatchRect" type="NinePatchRect" parent="Panel"]
layout_mode = 0
offset_left = 1.0
offset_top = -527.0
offset_right = 951.0
offset_bottom = -205.0
scale = Vector2(1.24574, 2.06407)
texture = ExtResource("2_33fx1")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
metadata/_edit_group_ = true

[node name="Buttons" type="Control" parent="Panel/NinePatchRect"]
anchors_preset = 0
offset_left = -0.802734
offset_top = 255.321
offset_right = 39.1973
offset_bottom = 295.321

[node name="Start" type="Button" parent="Panel/NinePatchRect/Buttons"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 31.7835
offset_top = 6.39417
offset_right = 64.7835
offset_bottom = 39.3942
scale = Vector2(1.58677, 1)
icon = ExtResource("4_p5hur")
metadata/_edit_group_ = true

[node name="Attack" type="Button" parent="Panel/NinePatchRect/Buttons"]
layout_mode = 0
offset_left = 143.433
offset_top = 4.42672
offset_right = 161.433
offset_bottom = 22.4267
scale = Vector2(3.2787, 1.84647)
icon = SubResource("AtlasTexture_8wgf6")
flat = true

[node name="Pause" type="Button" parent="Panel/NinePatchRect/Buttons"]
process_mode = 3
layout_mode = 0
offset_left = 813.0
offset_top = 16.0
offset_right = 833.0
offset_bottom = 34.0
scale = Vector2(2.21027, 1.62958)
icon = SubResource("AtlasTexture_18rsg")
flat = true
icon_alignment = 1
expand_icon = true

[node name="values" type="Control" parent="Panel/NinePatchRect"]
unique_name_in_owner = true
anchors_preset = 0
offset_left = -175.205
offset_top = 69.3986
offset_right = -135.205
offset_bottom = 109.399

[node name="name" type="Label" parent="Panel/NinePatchRect/values"]
layout_mode = 0
offset_left = 236.339
offset_top = -14.2639
offset_right = 289.339
offset_bottom = 8.73615
text = "nAME"
label_settings = SubResource("LabelSettings_4gdri")

[node name="Speed" type="Label" parent="Panel/NinePatchRect/values"]
layout_mode = 0
offset_left = 228.0
offset_top = 25.0
offset_right = 281.0
offset_bottom = 48.0
text = "speed"
label_settings = SubResource("LabelSettings_rro6i")

[node name="Tail" type="Label" parent="Panel/NinePatchRect/values"]
layout_mode = 0
offset_left = 228.0
offset_top = 55.0
offset_right = 281.0
offset_bottom = 78.0
text = "tail"
label_settings = SubResource("LabelSettings_gqnsv")

[node name="att_power" type="Label" parent="Panel/NinePatchRect/values"]
layout_mode = 0
offset_left = 228.0
offset_top = 85.0
offset_right = 335.0
offset_bottom = 109.0
text = "attPower"
label_settings = SubResource("LabelSettings_c40ji")

[node name="att_range" type="Label" parent="Panel/NinePatchRect/values"]
layout_mode = 0
offset_left = 228.0
offset_top = 115.0
offset_right = 335.0
offset_bottom = 140.0
text = "attRange"
label_settings = SubResource("LabelSettings_2mang")

[node name="labels" type="Control" parent="Panel/NinePatchRect"]
unique_name_in_owner = true
anchors_preset = 0
offset_left = -298.264
offset_top = 68.4149
offset_right = -258.264
offset_bottom = 108.415

[node name="Tail2" type="TextureRect" parent="Panel/NinePatchRect/labels"]
layout_mode = 0
offset_left = 310.0
offset_top = 55.0
offset_right = 320.0
offset_bottom = 65.0
scale = Vector2(2.43, 2.43)
texture = SubResource("AtlasTexture_qw1rw")

[node name="speed" type="TextureRect" parent="Panel/NinePatchRect/labels"]
layout_mode = 0
offset_left = 310.0
offset_top = 25.0
offset_right = 320.0
offset_bottom = 35.0
scale = Vector2(2.43, 2.43)
texture = SubResource("AtlasTexture_203xu")

[node name="att_power2" type="TextureRect" parent="Panel/NinePatchRect/labels"]
layout_mode = 0
offset_left = 310.0
offset_top = 85.0
offset_right = 320.0
offset_bottom = 95.0
scale = Vector2(2.43, 2.43)
texture = SubResource("AtlasTexture_83mdc")

[node name="att_power3" type="TextureRect" parent="Panel/NinePatchRect/labels"]
layout_mode = 0
offset_left = 310.0
offset_top = 115.0
offset_right = 320.0
offset_bottom = 125.0
scale = Vector2(2.43, 2.43)
texture = SubResource("AtlasTexture_h60pp")

[node name="name" type="Label" parent="Panel/NinePatchRect/labels"]
layout_mode = 0
offset_left = 309.0
offset_top = -13.0
offset_right = 362.0
offset_bottom = 10.0
text = "name:"
label_settings = SubResource("LabelSettings_4gdri")

[node name="Speed" type="Label" parent="Panel/NinePatchRect/labels"]
visible = false
layout_mode = 0
offset_left = 310.0
offset_top = 30.0
offset_right = 363.0
offset_bottom = 53.0
text = "Speed:"
label_settings = SubResource("LabelSettings_rro6i")

[node name="Tail" type="Label" parent="Panel/NinePatchRect/labels"]
visible = false
layout_mode = 0
offset_left = 310.0
offset_top = 50.0
offset_right = 363.0
offset_bottom = 99.0
text = "Tail:"
label_settings = SubResource("LabelSettings_gqnsv")

[node name="att_power" type="Label" parent="Panel/NinePatchRect/labels"]
visible = false
layout_mode = 0
offset_left = 310.0
offset_top = 70.0
offset_right = 417.0
offset_bottom = 119.0
text = "Attack Power:"
label_settings = SubResource("LabelSettings_c40ji")

[node name="att_range" type="Label" parent="Panel/NinePatchRect/labels"]
visible = false
layout_mode = 0
offset_left = 310.0
offset_top = 90.0
offset_right = 417.0
offset_bottom = 139.0
text = "Attack Range:"
label_settings = SubResource("LabelSettings_2mang")

[node name="icon" type="TextureRect" parent="Panel/NinePatchRect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 30.1657
offset_top = 17.2618
offset_right = 52.1657
offset_bottom = 39.2618
scale = Vector2(2.76888, 1.87499)
texture = ExtResource("3_1diq0")
stretch_mode = 2

[node name="start_label" type="Label" parent="Panel/NinePatchRect"]
layout_mode = 0
offset_left = 90.473
offset_top = 266.142
offset_right = 130.473
offset_bottom = 289.142
text = "start"
label_settings = SubResource("LabelSettings_0v3c8")
metadata/_edit_group_ = true

[node name="inv" type="NinePatchRect" parent="Panel"]
texture_filter = 1
layout_mode = 0
offset_left = 290.0
offset_top = 2.0
offset_right = 415.0
offset_bottom = 45.0
scale = Vector2(3.19289, 2.66497)
mouse_filter = 0
texture = ExtResource("1_0av6a")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="GridContainer" type="GridContainer" parent="Panel/inv"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.5
offset_top = -18.5
offset_right = 58.5
offset_bottom = 28.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
columns = 6

[node name="inv_UI_slot" parent="Panel/inv/GridContainer" instance=ExtResource("7_i28r4")]
layout_mode = 2

[node name="inv_UI_slot2" parent="Panel/inv/GridContainer" instance=ExtResource("7_i28r4")]
layout_mode = 2

[node name="inv_UI_slot3" parent="Panel/inv/GridContainer" instance=ExtResource("7_i28r4")]
layout_mode = 2

[node name="inv_UI_slot4" parent="Panel/inv/GridContainer" instance=ExtResource("7_i28r4")]
layout_mode = 2

[node name="inv_UI_slot5" parent="Panel/inv/GridContainer" instance=ExtResource("7_i28r4")]
layout_mode = 2

[node name="inv_UI_slot6" parent="Panel/inv/GridContainer" instance=ExtResource("7_i28r4")]
layout_mode = 2

[node name="inv_UI_slot7" parent="Panel/inv/GridContainer" instance=ExtResource("7_i28r4")]
layout_mode = 2

[node name="inv_UI_slot8" parent="Panel/inv/GridContainer" instance=ExtResource("7_i28r4")]
layout_mode = 2

[node name="inv_UI_slot9" parent="Panel/inv/GridContainer" instance=ExtResource("7_i28r4")]
layout_mode = 2

[node name="inv_UI_slot10" parent="Panel/inv/GridContainer" instance=ExtResource("7_i28r4")]
layout_mode = 2

[node name="inv_UI_slot11" parent="Panel/inv/GridContainer" instance=ExtResource("7_i28r4")]
layout_mode = 2

[node name="inv_UI_slot12" parent="Panel/inv/GridContainer" instance=ExtResource("7_i28r4")]
layout_mode = 2

[node name="Pause" type="Panel" parent="."]
process_mode = 2
visible = false
layout_mode = 0
offset_left = 549.0
offset_top = 678.0
offset_right = 589.0
offset_bottom = 718.0

[node name="NinePatchRect" type="NinePatchRect" parent="Pause"]
layout_mode = 0
offset_left = -146.0
offset_top = -94.0
offset_right = -106.0
offset_bottom = -54.0
scale = Vector2(9.08531, 5.55175)
texture = ExtResource("1_0av6a")
region_rect = Rect2(6, 6, 6, 6)

[node name="Label" type="Label" parent="Pause/NinePatchRect"]
layout_mode = 0
offset_left = 11.8873
offset_top = -2.88197
offset_right = 68.8873
offset_bottom = 20.118
scale = Vector2(0.281448, 0.614606)
text = "Paused"
label_settings = SubResource("LabelSettings_elshm")

[node name="back_to_game" type="Button" parent="Pause/NinePatchRect"]
layout_mode = 0
offset_left = 14.8592
offset_top = 9.54653
offset_right = 59.8592
offset_bottom = 40.5465
scale = Vector2(0.204869, 0.283745)
flat = true

[node name="Label" type="Label" parent="Pause/NinePatchRect/back_to_game"]
layout_mode = 0
offset_left = 4.83533
offset_top = 4.44365
offset_right = 44.8353
offset_bottom = 27.4436
text = "back
"
label_settings = SubResource("LabelSettings_73ddp")

[node name="Home" type="Button" parent="Pause/NinePatchRect"]
layout_mode = 0
offset_left = 15.0793
offset_top = 17.1117
offset_right = 60.0793
offset_bottom = 48.1117
scale = Vector2(0.204869, 0.283745)
flat = true

[node name="Label" type="Label" parent="Pause/NinePatchRect/Home"]
layout_mode = 0
offset_left = 4.83533
offset_top = 4.44365
offset_right = 44.8353
offset_bottom = 27.4436
text = "home
"
label_settings = SubResource("LabelSettings_73ddp")

[node name="HSlider" type="HSlider" parent="Pause/NinePatchRect"]
visible = false
layout_mode = 0
offset_left = 11.9974
offset_top = 24.1365
offset_right = 19.9974
offset_bottom = 40.1365
scale = Vector2(0.269364, 0.329345)

[node name="mute" type="CheckButton" parent="Pause/NinePatchRect"]
layout_mode = 0
offset_left = 13.2081
offset_top = 26.4781
offset_right = 57.2081
offset_bottom = 50.4781
scale = Vector2(0.0984854, 0.214193)

[node name="Label" type="Label" parent="Pause/NinePatchRect/mute"]
layout_mode = 0
offset_left = 52.0913
offset_top = -10.3716
offset_right = 93.0913
offset_bottom = 12.6284
scale = Vector2(1.42547, 1.44712)
text = "Mute"
label_settings = SubResource("LabelSettings_6v7tc")

[node name="Fade" parent="." instance=ExtResource("8_roleo")]
unique_name_in_owner = true
visible = false
position = Vector2(8, 38)

[node name="Fade2" parent="." instance=ExtResource("8_roleo")]
unique_name_in_owner = true
visible = false
position = Vector2(8, 38)

[connection signal="pressed" from="Panel/NinePatchRect/Buttons/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Panel/NinePatchRect/Buttons/Attack" to="." method="_on_attack_pressed"]
[connection signal="button_down" from="Panel/NinePatchRect/Buttons/Pause" to="." method="_on_pause_button_down"]
[connection signal="button_down" from="Pause/NinePatchRect/back_to_game" to="." method="_on_back_to_game_button_down"]
[connection signal="button_down" from="Pause/NinePatchRect/Home" to="." method="_on_home_button_down"]
[connection signal="toggled" from="Pause/NinePatchRect/mute" to="." method="_on_mute_toggled"]
